<resources>
    <string name="app_name" translatable="false">CalendarIDI</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="admin_email" translatable="false">joan.marce.igual@est.fib.upc.edu</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="app_icon_name">App icon</string>
    <string name="view_month">Month</string>
    <string name="view_week">Week</string>
    <string name="view_day">Day</string>
    <string name="view_tasks">Tasks</string>
    <string name="help">Help</string>
    <string name="about">About</string>
</resources>
