<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_gallery"
            android:icon="@android:drawable/ic_menu_month"
            android:title="@string/view_month" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@android:drawable/ic_menu_week"
            android:title="@string/view_week" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@android:drawable/ic_menu_day"
            android:title="@string/view_day" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@android:drawable/ic_menu_today"
            android:title="@string/view_tasks" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_share"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/help" />
        <item
            android:id="@+id/nav_send"

            android:title="@string/about" />
    </group>

</menu>
